--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./images/cloud-sun.svg" />
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Weather app</title>
+    <title>Weather</title>
   </head>
   <body>
     <main>
